syntax = "proto3";

option csharp_namespace = "WC.Service.EmailDomains.gRPC.Client.Clients";

package email_domains;

service GreeterEmailDomains {
  rpc DoesEmailDomainExist (DoesEmailDomainExistRequest) returns (DoesEmailDomainExistResponse);
}

message DoesEmailDomainExistRequest {
  string domain_name = 1;
}

message DoesEmailDomainExistResponse {
  bool exists = 1;
}
